# stereology

./: .gitignore  1775642493366_STEREOLOGY_COMPLETE_PLAN_FINAL.docx  CLAUDE.md  RESTRUCTURE_PLAN.md  REVIEW_SELF_CHECK.md  UPGRADE_INSTRUCTIONS.md  pyproject.toml  reproduce.py
data/: alpacaeval.csv  arena_categories.csv  arena_elo.csv  epoch_ai_merged.csv  extended.csv  extended_official.csv  humaneval_scores.csv  livebench.csv  master_matrix.csv  mmmu_pro_scores.csv  mmmu_scores.csv  ollm_v2.csv  ollm_v2_top200.csv  open_vlm_leaderboard.csv  openevals.csv  swe_bench_verified_scores.csv
experiments/: __init__.py  exp1_dimensionality.py  exp2_blind_spot.py  exp3_fix_works.py  exp4_corollaries.py  monoculture.py  paradigm_tests.py  rebuild_figures_v5.py  reviewer_fixes.py  v15_experiments.py  validation.py  validation_v5.py  validation_v6.py  validation_v7.py  validation_v8.py
neurips_scraper/: build_calibration.py  scrape.py  validate.py
paper/: checklist.tex  main.tex  references.bib
proofs/: PROOF_INDEX.tex  corollary_proofs.tex  final_1percent.tex  final_gaps.tex  gap1_moonshot_theorem4_general.tex  gap2_ranking_unreliability.tex  gap3_theorem2_corrected.tex  gap4_theorem1_strengthened.tex  moonshot_final.tex  moonshot_xray_stability.tex  problem15_complete.tex  residual1_resolved.tex  residual2_resolved.tex  residual3_resolved.tex  theorem1_proof.tex  theorem2_proof.tex  theorem3_proof.tex  theorem4_proof.tex  verification.tex
results/: calibration_plot.json  convexity_bic.json  cross_methodology_monoculture.json  epoch_ai_analysis.json  epoch_dense.json  (+26 more)
(+53 files in other folders)
