[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stereology"
version = "0.1.0"
description = "Stereological theory of LLM benchmark coverage"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
